# schema

./: ATTRIBUTION.md  Cargo.toml  RELEASING.md  TELEMETRY.md
.github/workflows/: release.yml
crates/jcode-agent-runtime/: Cargo.toml
crates/jcode-app-core/: Cargo.toml
crates/jcode-azure-auth/: Cargo.toml
crates/jcode-background-types/: Cargo.toml
crates/jcode-embedding/: Cargo.toml
crates/jcode-logging/: Cargo.toml
crates/jcode-notify-email/: Cargo.toml
crates/jcode-pdf/: Cargo.toml
crates/jcode-provider-anthropic/: Cargo.toml
crates/jcode-provider-anthropic-runtime/: Cargo.toml
crates/jcode-provider-antigravity/: Cargo.toml
crates/jcode-provider-antigravity-runtime/: Cargo.toml
crates/jcode-provider-bedrock/: Cargo.toml
crates/jcode-provider-claude-cli-runtime/: Cargo.toml
crates/jcode-provider-copilot/: Cargo.toml
crates/jcode-provider-copilot-runtime/: Cargo.toml
crates/jcode-provider-core/: Cargo.toml
crates/jcode-provider-cursor-runtime/: Cargo.toml
crates/jcode-provider-doctor/: Cargo.toml
crates/schema/: Cargo.toml
crates/schema/src/: agent.rs  backtest.rs  deliberators.rs  demo_provider.rs  envs.rs  executor.rs  lib.rs  main.rs  model.rs  planner.rs  program.rs  protocol.rs  session.rs  timeline.rs
crates/schema/tests/: harness.rs  program_protocol.rs
docs/: DISCOVERY_BENCHMARK.md  SCHEMA_HARNESS.md
scripts/: benchmark_discovery.py  dev_cargo.sh  discovery_benchmark_cases.json  quick-release.sh  remote_build.sh  test_benchmark_discovery.py  test_fast.sh
src/cli/: mod.rs  (+3 more)
telemetry-worker/: README.md  schema.sql
(+76 files in other folders)
