[package]
name = "schema"
version = "0.1.0"
edition = "2024"
publish = false
description = "Schema harness: certified-world-model control loop augmenting the jcode coding-agent harness (abducted from schema-harness.github.io)"

[[bin]]
name = "schema"
path = "src/main.rs"

[dependencies]
# Intentionally std-only: the control plane must not grow a supply chain.
