[package]
name = "schema"
version = "0.2.0"
edition = "2024"
publish = false
description = "Schema harness: certified-world-model control loop augmenting the jcode coding-agent harness (abducted from schema-harness.github.io)"

[[bin]]
name = "schema"
path = "src/main.rs"

[dependencies]
# serde/serde_json are already compiled for the jcode workspace (present in
# Cargo.lock), so depending on them here adds ZERO new crates to jcode's
# supply chain. They are required to make the world model a serializable,
# LLM-authorable program and to persist sessions — see docs/SCHEMA_HARNESS.md.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
